PiAtMaster/traefik/traefik-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: node1
    http:
      paths:
      - backend:
          serviceName: traefik-dashboard
          servicePort: 9000
